# socket.io-rust-emitter

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
src/: lib.rs
src/implementations/: javascript.rs  mod.rs  python_socketio.rs
