[package]
name = "socketio-rust-emitter"
version = "0.1.2"
authors = ["Ryo Motozawa <motoryo1@gmail.com>"]
edition = "2018"

description = "A Rust implementation of socketio-emitter "
homepage = "https://github.com/epli2/socketio-rust-emitter"
repository = "https://github.com/epli2/socketio-rust-emitter"
readme = "README.md"
keywords = ["socketio"]
license = "MIT"

[dependencies]
redis = "0.27"
rmp = "0.8"
serde = "1.0"
serde_derive = "1.0"
rmp-serde = "1.3"

[dev-dependencies]
testcontainers = { version = "0.22.0", features = ["blocking"] }
