[package]
name = "socketio-rust-emitter"
version = "0.1.2"
authors = ["Ryo Motozawa <motoryo1@gmail.com>"]
edition = "2018"

description = "A Rust implementation of socketio-emitter "
homepage = "https://github.com/epli2/socketio-rust-emitter"
repository = "https://github.com/epli2/socketio-rust-emitter"
readme = "README.md"
keywords = ["socketio"]
license = "MIT"

[dependencies]
redis = "0.27"
rmp = "0.8"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
rmp-serde = { version = "1.3", optional = true }
thiserror = "1"

[dev-dependencies]
testcontainers = { version = "0.22.0", features = ["blocking"] }
tempfile = "3.12"

[features]
default = ["js-v7"]
# Feature structure: {language}-{version of adapter}
# Unfortunatelly, the version of the adapter is not directly related to the version of the protocol, and differs per implementation.

# Compatible with socket.io-redis-adapter v7 analogous with socket.io-redis-emitter v4 (socket.io protocol version 4)
js-v7 = ["rmp-serde"]
# Compatible with python-socketio v4 (socket.io protocol version 3 or 4)
python-v4 = []

[lints.clippy]
unwrap_in_result = "deny"
unwrap_used = "deny"
